# extracture

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_extraction.py  template_extraction.py
src/extracture/: __init__.py  cli.py  config.py  extractor.py  models.py  schema.py
src/extracture/agentic/: __init__.py  extractor.py
src/extracture/consensus/: __init__.py  engine.py
src/extracture/correction/: __init__.py  router.py  store.py
src/extracture/ingest/: __init__.py  _pdf_worker.py  pdf.py  preprocessor.py  router.py
src/extracture/prompts/: __init__.py
src/extracture/providers/: __init__.py  base.py  litellm_provider.py  registry.py  textract_provider.py
src/extracture/templates/: __init__.py  engine.py
src/extracture/verification/: __init__.py  calibration.py  grounding.py  validator.py
tests/: test_consensus.py  test_corrections.py  test_edge_cases.py  test_models.py  test_schema.py  test_verification.py
